# Belt-and-Road-Reboot-Chinese

./: README.md  format_report.py  html2image.py  html2pdf.py  markdown2html.py  pyproject.toml
formatted/: Belt_and_Road_Reboot_Chapter_1.md  Belt_and_Road_Reboot_Chapter_2.md  Belt_and_Road_Reboot_Chapter_3.md  Belt_and_Road_Reboot_Chapter_4.md  [Formatted]Belt_and_Road_Reboot_Chapter_1.docx  [Formatted]Belt_and_Road_Reboot_Chapter_2.docx  [Formatted]Belt_and_Road_Reboot_Chapter_3.docx  [Formatted]Belt_and_Road_Reboot_Chapter_4.docx  [References]Belt_and_Road_Reboot_Chapter_1.docx  [References]Belt_and_Road_Reboot_Chapter_2.docx  [References]Belt_and_Road_Reboot_Chapter_3.docx  [References]Belt_and_Road_Reboot_Chapter_4.docx
html_template/: document-content.css  github-markdown.css  template.html
input/: Belt_and_Road_Reboot_Chapter_1.docx  Belt_and_Road_Reboot_Chapter_2.docx  Belt_and_Road_Reboot_Chapter_3.docx  Belt_and_Road_Reboot_Chapter_4.docx
proofread/: [Translated]Belt_and_Road_Reboot_Chapter_1.html  [Translated]Belt_and_Road_Reboot_Chapter_1.md  [Translated]Belt_and_Road_Reboot_Chapter_2.html  [Translated]Belt_and_Road_Reboot_Chapter_2.md  [Translated]Belt_and_Road_Reboot_Chapter_3.html  [Translated]Belt_and_Road_Reboot_Chapter_3.md  [Translated]Belt_and_Road_Reboot_Chapter_4.html  [Translated]Belt_and_Road_Reboot_Chapter_4.md
translated/: [Translated]Belt_and_Road_Reboot_Chapter_1.md  [Translated]Belt_and_Road_Reboot_Chapter_2.md  [Translated]Belt_and_Road_Reboot_Chapter_3.md  [Translated]Belt_and_Road_Reboot_Chapter_4.md
(+4 files in other folders)
